syntax = "proto3";

package rhythmicity.main_api;

option go_package = "github.com/nichol20/rhythmicity/data-api/internal/pb";

import "common.proto";

message ArtistSpotify {
    string id = 1;
    uint32 popularity = 2;
    repeated Image images = 3;
}

message ArtistMessage {
    string id = 1;
    string name = 2;
    repeated string genres = 3;
    repeated string styles = 4;
    ArtistSpotify spotify = 5;
}

message SimplifiedArtist {
    string id = 1;
    string name = 2;
}

message GetPopularArtistsRequest {
    optional uint32 limit = 1;
    optional uint32 offset = 2;
}

message MultipleArtists {
    repeated ArtistMessage artists = 1;
}

service Artist {
    rpc GetPopularArtists(GetPopularArtistsRequest) returns (MultipleArtists){};
    rpc GetArtist(RequestById) returns (ArtistMessage){};
    rpc GetSeveralArtists(RequestByIds) returns (MultipleArtists){};
    rpc GetArtistsByTrackId(RequestById) returns (MultipleArtists){};
    rpc GetArtistsByAlbumId(RequestById) returns (MultipleArtists){};
}